looks like flex-dev list is live
git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1226729 13f79535-47bb-0310-9956-ffa450edef68

--- a/temp-website/index.html
+++ b/temp-website/index.html
@@ -4,6 +4,7 @@
     <style type="text/css">
         body { font-family: Georgia, Arial, Verdana; }
         h1 { border-bottom: solid gray 1px; }
+        div { padding-bottom: 1em; }
     </style>
 </head>
 <body>
@@ -12,11 +13,9 @@
         This is an ugly temporary website for the upcoming Apache Flex website - stay tuned for more info.
     </div>
     <div>
-        <!-- TODO activate once mailing list is created
         For now, you can join the Flex developer's mailing list by sending an email
         to <code>flex-dev-subscribe (at) incubator.apache.org</code> - this is where <em>everything</em>
         related to this project is being discussed.
-         -->
     </div>
     <h2>Links</h2>
     <ul>
