add mailing lists to temp website
git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1226764 13f79535-47bb-0310-9956-ffa450edef68

--- a/temp-website/index.html
+++ b/temp-website/index.html
@@ -10,12 +10,22 @@
 <body>
     <h1>Apache Flex (incubating)</h1>
     <div>
-        This is an ugly temporary website for the upcoming Apache Flex website - stay tuned for more info.
+        This is an ugly temporary website for the Apache Flex podling - stay tuned for more info.
     </div>
+    <h2>Mailing lists</h2>
     <div>
         For now, you can join the Flex developer's mailing list by sending an email
         to <code>flex-dev-subscribe (at) incubator.apache.org</code> - this is where <em>everything</em>
         related to this project is being discussed.
+    </div>
+    <div>
+        Once subscribed, send messages to <code>flex-dev (at) incubator.apache.org</code>.
+    </div>
+    <div>
+        In addition to the dev list, active developers should subscribe to the <code>-commits</code>
+        list, and PPMC members (according to the list in the Flex proposal, see link below) should
+        also subscribe to the <code>-private</code> list, using either their Apache address or an
+        address that's listed in <code>https://svn.apache.org/repos/private/committers/MailAlias.txt</code> .
     </div>
     <h2>Links</h2>
     <ul>
