Accounts info added
git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1226779 13f79535-47bb-0310-9956-ffa450edef68

--- a/temp-website/index.html
+++ b/temp-website/index.html
@@ -12,6 +12,7 @@
     <div>
         This is an ugly temporary website for the Apache Flex podling - stay tuned for more info.
     </div>
+
     <h2>Mailing lists</h2>
     <div>
         For now, you can join the Flex developer's mailing list by sending an email
@@ -27,6 +28,17 @@
         also subscribe to the <code>-private</code> list, using either their Apache address or an
         address that's listed in <code>https://svn.apache.org/repos/private/committers/MailAlias.txt</code> .
     </div>
+
+    <h2>Apache accounts</h2>
+    <div>
+       If you're a committer for the Flex podling (listed in the podling's incubation proposal, see below),
+       your <a href="http://www.apache.org/licenses/icla.txt">iCLA</a> has been filed
+       and you don't have an @apache.org account yet, please send an email to <code>flex-dev (at) incubator.apache.org</code>
+       with [ACCOUNT] in the subject line, indicating what Apache ID you'd like us to use for creating
+       your account. See <a href="http://people.apache.org/committer-index.html">http://people.apache.org/committer-index.html</a>
+       for existing IDs, and choose one that's not in use yet.
+    </div>
+
     <h2>Links</h2>
     <ul>
         <li>
