Remove mention of the private list to avoid unwanted subscriptions
git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1226803 13f79535-47bb-0310-9956-ffa450edef68

--- a/temp-website/index.html
+++ b/temp-website/index.html
@@ -24,9 +24,7 @@
     </div>
     <div>
         In addition to the dev list, active developers should subscribe to the <code>-commits</code>
-        list, and PPMC members (according to the list in the Flex proposal, see link below) should
-        also subscribe to the <code>-private</code> list, using either their Apache address or an
-        address that's listed in <code>https://svn.apache.org/repos/private/committers/MailAlias.txt</code> .
+        list.
     </div>
 
     <h2>Apache accounts</h2>
