added the guide for new committers
git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk@1227124 13f79535-47bb-0310-9956-ffa450edef68

--- a/temp-website/index.html
+++ b/temp-website/index.html
@@ -37,6 +37,12 @@
        for existing IDs, and choose one that's not in use yet.
     </div>
 
+    <h2>Guide for new committers</h2>
+    <div>
+      If you're a new Apache committer, please read at least the <a href="http://www.apache.org/dev/new-committers-guide.html">guide for 
+      new committers</a>. Other content from <a href="http://www.apache.org/dev">www.apache.org/dev</a> can be useful as well.
+    </div>
+
     <h2>Links</h2>
     <ul>
         <li>
